<resources>
    <string name="app_name">CreditCard</string>
    <string name="action_settings">Settings</string>

    <string name="CardBalance">Enter Card Balance($)</string>
    <string name="YearlyInterestRate">Enter Yearly Interest Rate(%)</string>
    <string name="MinimumPayment">Enter Minimum Payment($)</string>
    <string name="FinalCardBalance">Final Card Balance($)</string>
    <string name="MonthRemaining">Month Remaining</string>
    <string name="InterestPaidWillBe">Interest Paid Will Be($)</string>
    <string name="Compute">Compute</string>
    <string name="Clear">Clear</string>

</resources>
