<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:weightSum="8">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right"
        android:weightSum="1">

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
             android:textSize="20dp"
            android:text="@string/CardBalance"
            android:id="@+id/textView2" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.47"
            android:id="@+id/editText"
            android:maxWidth="50dp" />
              </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.21"
            android:textSize="20dp"
            android:text="@string/YearlyInterestRate"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:id="@+id/editText2"
            android:minWidth="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MinimumPayment"
            android:textSize="20dp"
            android:id="@+id/textView3"
            android:layout_weight="0.21" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.79"
            android:id="@+id/editText3" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FinalCardBalance"
            android:layout_weight="0.44"
            android:textSize="20dp"
            android:id="@+id/textView4" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.56"
            android:id="@+id/editText4" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.55"
            android:textSize="20dp"
            android:text="@string/MonthRemaining"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:id="@+id/editText5" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:textSize="20dp"
            android:text="@string/InterestPaidWillBe"
            android:id="@+id/textView6" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.57"
            android:gravity="right"
            android:id="@+id/editText6" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="right"
        android:weightSum="2"
        android:layout_weight="3.48"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:text="@string/Compute"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:text="@string/Clear"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>
